[build-system]
requires = [
    "setuptools>=42,<77",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_*"
archs = "x86_64"
manylinux-x86_64-image = "manylinux2014"
